--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,33 @@ strong {
   color: #403755;
   margin-top: 5px;
 }
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+  line-height: 20px;
+}
+.weather-forecast-icon {
+  font-size: 35px;
+  text-align: center;
+  line-height: -20px;
+  margin-bottom: 10px;
+}
+.weather-forecast-temps {
+  text-align: center;
+  color: #f65281;
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+.weather-forecast-temp-one {
+  padding: 0 10px;
+}
 footer {
   border-top: 1px solid #f4f1fe;
   padding: 30px 0 0 0;
