--- a/src/style.css
+++ b/src/style.css
@@ -80,27 +80,27 @@ strong {
   justify-content: space-around;
   margin-top: 30px;
 }
-.weather-forecast-date {
+.weather-forecat-date {
   text-align: center;
   color: rgba(0, 0, 0, 0.2);
   font-size: 16px;
   line-height: 20px;
-}
-.weather-forecast-icon {
-  font-size: 35px;
-  text-align: center;
-  line-height: -20px;
   margin-bottom: 10px;
 }
-.weather-forecast-temps {
+.weather-forecat-icon {
   text-align: center;
+  font-size: 30px;
+}
+.weather-forecat-temperatures {
+  text-align: center;
+  font-size: 16px;
   color: #f65281;
   display: flex;
-  margin-top: 10px;
   justify-content: center;
+  margin-top: 10px;
 }
-.weather-forecast-temp-one {
-  padding: 0 10px;
+.weather-temp {
+  padding: 10px;
 }
 footer {
   border-top: 1px solid #f4f1fe;
